fixed layout shift upon toggling display of nft ticket img and metadata

--- a/interface/src/components/MintSection.css
+++ b/interface/src/components/MintSection.css
@@ -209,8 +209,7 @@
     }
 
     .imgSpecContainer .leftCard .ticketContainer {
-        padding-top: 70px;
-        padding-bottom: 60px;
+        min-height: 400px;
     }
 
     .imgSpecContainer .rightCard {
